--- a/SPEAKER_VERIFI_IDENT/notebooks/spkrec-ecapa-voxceleb.ipynb
+++ b/SPEAKER_VERIFI_IDENT/notebooks/spkrec-ecapa-voxceleb.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "02063800",
    "metadata": {},
    "outputs": [],
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "7c3e88e9",
    "metadata": {},
    "outputs": [],
@@ -40,19 +40,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "24302bac",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.10112106"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# for speaker identification\n",
     "\n",
     "classifier = EncoderClassifier.from_hparams(source=\"speechbrain/spkrec-ecapa-voxceleb\")\n",
-    "signal, fs =torchaudio.load('0.wav')\n",
+    "signal, fs =torchaudio.load('../../MICROPHONE_TEST/test/0.wav')\n",
     "embeddings = classifier.encode_batch(signal)\n",
     "\n",
-    "signal, fs =torchaudio.load('1.wav')\n",
-    "embeddings2 = classifier.encode_batch(signal)\n",
+    "signal2, fs =torchaudio.load('../../MICROPHONE_TEST/test/2.wav')\n",
+    "\n",
+    "embeddings2 = classifier.encode_batch(signal2)\n",
     "\n",
     "cos_sim(embeddings2.numpy()[0][0],embeddings.numpy()[0][0])"
    ]
